Default Shader setting

--- a/Packages/top.kuanmi.render-pipelines.mk@0.0.1/Editor/KuanMi.RenderPipelines.MKRP.Editor.asmdef
+++ b/Packages/top.kuanmi.render-pipelines.mk@0.0.1/Editor/KuanMi.RenderPipelines.MKRP.Editor.asmdef
@@ -1,9 +1,9 @@
 {
     "name": "KuanMi.RenderPipelines.MKRP.Editor",
-    "rootNamespace": "",
     "references": [
         "KuanMi.RenderPipelines.MKRP.Runtime",
-        "Unity.RenderPipelines.Core.Editor"
+        "Unity.RenderPipelines.Core.Editor",
+        "Unity.RenderPipelines.Core.Runtime"
     ],
     "includePlatforms": [
         "Editor"
@@ -14,6 +14,5 @@
     "precompiledReferences": [],
     "autoReferenced": true,
     "defineConstraints": [],
-    "versionDefines": [],
-    "noEngineReferences": false
+    "versionDefines": []
 }
