--- a/Packages/top.kuanmi.render-pipelines.mk@0.0.1/Runtime/KuanMi.RenderPipelines.MKRP.Runtime.asmdef
+++ b/Packages/top.kuanmi.render-pipelines.mk@0.0.1/Runtime/KuanMi.RenderPipelines.MKRP.Runtime.asmdef
@@ -1,7 +1,8 @@
 {
     "name": "KuanMi.RenderPipelines.MKRP.Runtime",
-    "rootNamespace": "",
-    "references": [],
+    "references": [
+        "Unity.RenderPipelines.Core.Runtime"
+    ],
     "includePlatforms": [],
     "excludePlatforms": [],
     "allowUnsafeCode": true,
